--- a/src/Resources/css/screen.css
+++ b/src/Resources/css/screen.css
@@ -252,11 +252,7 @@ button.cupid-green {
   background-color: #7fbf4d;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7fbf4d), color-stop(100%, #63a62f));
   background-image: -webkit-linear-gradient(top, #7fbf4d, #63a62f);
-  background-image: -moz-linear-gradient(top, #7fbf4d, #63a62f);  
-  border: 1px solid #63a62f; border-bottom: 1px solid #5b992b;
-  -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 0 0 #96ca6d; -moz-box-shadow: inset 0 1px 0 0 #96ca6d; -ms-box-shadow: inset 0 1px 0 0 #96ca6d;
-  -o-box-shadow: inset 0 1px 0 0 #96ca6d; box-shadow: inset 0 1px 0 0 #96ca6d;
+  border: 1px solid #63a62f; border-bottom: 1px solid #5b992b; border-radius: 3px; box-shadow: inset 0 1px 0 0 #96ca6d;
   color: #fff; font: bold 13px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   line-height: 1; text-align: center; text-shadow: 0 -1px 0 #4c9021;
   padding: 7px 0 8px 0;
@@ -265,34 +261,41 @@ button.cupid-green {
     background-color: #76b347;
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #76b347), color-stop(100%, #5e9e2e));
     background-image: -webkit-linear-gradient(top, #76b347, #5e9e2e);
-    background-image: -moz-linear-gradient(top, #76b347, #5e9e2e);    
-    -webkit-box-shadow: inset 0 1px 0 0 #8dbf67; -moz-box-shadow: inset 0 1px 0 0 #8dbf67; -ms-box-shadow: inset 0 1px 0 0 #8dbf67;
-    -o-box-shadow: inset 0 1px 0 0 #8dbf67; box-shadow: inset 0 1px 0 0 #8dbf67;
+    box-shadow: inset 0 1px 0 0 #8dbf67;
     cursor: pointer; }
   button.cupid-green:active {
     border: 1px solid #5b992b; border-bottom: 1px solid #538c27;
-    -webkit-box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee; -moz-box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee;
-    -ms-box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee; -o-box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee;
+    box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee; }
+button.cupid-blue {
+  background-color: rgb(25,120,171);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(25,120,171)), color-stop(100%, rgb(53,156,206)));
+  background-image: -webkit-linear-gradient(top, rgb(25,120,171), rgb(53,156,206));
+  border: 1px solid rgb(53,156,206); border-bottom: 1px solid rgb(25,120,171); border-radius: 3px; box-shadow: inset 0 1px 0 0 #96ca6d;
+  color: #fff; font: bold 13px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  line-height: 1; text-align: center; text-shadow: 0 -1px 0 #4c9021;
+  padding: 7px 0 8px 0;
+  width: 250px; }
+  button.cupid-blue:hover {
+    background-color: rgb(25,120,171);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(25,120,171)), color-stop(100%, rgb(53,156,206)));
+    background-image: -webkit-linear-gradient(top, rgb(25,120,171), rgb(53,156,206));
+    box-shadow: inset 0 1px 0 0 #8dbf67;
+    cursor: pointer; }
+  button.cupid-blue:active {
+    border: 1px solid #5b992b; border-bottom: 1px solid rgb(25,120,171);
     box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee; }
 button.minimal {
   background: #e3e3e3;
-  border: 1px solid #bbb;
-  -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px;
-  -webkit-box-shadow: inset 0 0 1px 1px #f6f6f6; -moz-box-shadow: inset 0 0 1px 1px #f6f6f6; -ms-box-shadow: inset 0 0 1px 1px #f6f6f6;
-  -o-box-shadow: inset 0 0 1px 1px #f6f6f6; box-shadow: inset 0 0 1px 1px #f6f6f6;
+  border: 1px solid #bbb; border-radius: 3px;
+  box-shadow: inset 0 0 1px 1px #f6f6f6;
   color: #333; font: bold 12px "helvetica neue", helvetica, arial, sans-serif;
   line-height: 1; text-align: center; text-shadow: 0 1px 0 #fff;
   padding: 5px 0 6px; width: 80px; }
   button.minimal:hover {
     background: #d9d9d9; color: #222;
-		-webkit-box-shadow: inset 0 0 1px 1px #eaeaea; -moz-box-shadow: inset 0 0 1px 1px #eaeaea; -ms-box-shadow: inset 0 0 1px 1px #eaeaea;
-    -o-box-shadow: inset 0 0 1px 1px #eaeaea; box-shadow: inset 0 0 1px 1px #eaeaea;
+	box-shadow: inset 0 0 1px 1px #eaeaea;
     cursor: pointer; }
   button.minimal:active {
     background: #d0d0d0;
-    -webkit-box-shadow: inset 0 0 1px 1px #e3e3e3;
-    -moz-box-shadow: inset 0 0 1px 1px #e3e3e3;
-    -ms-box-shadow: inset 0 0 1px 1px #e3e3e3;
-    -o-box-shadow: inset 0 0 1px 1px #e3e3e3;
     box-shadow: inset 0 0 1px 1px #e3e3e3;
     color: #000; }
