--- a/web/includes/nasazeni.html
+++ b/web/includes/nasazeni.html
@@ -2,7 +2,7 @@
 							<h2 class="title">Nasazení aplikace</h2>
 							<div class="entry">
 								<p>
-								 Titanium framework je deklarován jako multiplatformní a neměl by tedy být problém s přenosem vytvořené aplikace na jiný operační systém. Bohužel dle získané zkušenosti tomu tak není. Aplikace byla primárně vyvíjena na operačním systému Windows 7, kde se neobjevily žádné větší problémy. Ty ale nastaly při pokusu o spuštění na jiné platformě. Pokus o nasazení byl proveden na dalších dvou různých operačních systémech. Šlo o operační systém Debian\cite{debian}, jakožto zástupce Linuxu, a Mac OS X\cite{mac}. Ani na jednom ze zmiňovaných systémů se nepodařilo aplikaci plně zprovoznit.
+								 Titanium framework je deklarován jako multiplatformní a neměl by tedy být problém s přenosem vytvořené aplikace na jiný operační systém. Bohužel dle získané zkušenosti tomu tak není. Aplikace byla primárně vyvíjena na operačním systému Windows 7, kde se neobjevily žádné větší problémy. Ty ale nastaly při pokusu o spuštění na jiné platformě. Pokus o nasazení byl proveden na dalších dvou různých operačních systémech. Šlo o operační systém Debian, jakožto zástupce Linuxu, a Mac OS X. Ani na jednom ze zmiňovaných systémů se nepodařilo aplikaci plně zprovoznit.
 								</p>
 
 								<h3>Linux</h3>
@@ -15,7 +15,7 @@
 
 								<h3>Mac OS X</h3>
 								<p>
-								 Testování na této platformě bylo poměrně problematické, protože odpovídající operační systém nebyl k dispozici. Pokusy o nasazení byly prováděny pouze na soukromém počítači vedoucího této práce a lze říci, že nebyly 100\% úspěšné. Na rozdíl od Linuxu sice bylo možné nainstalovat a spustit vývojové prostředí, ale se samotnou aplikací už ne. Ani po mnoha pokusech se ji nezdařilo plně zprovoznit. Neustále se objevovaly chyby na úrovni OS, které byly obtížně odstranitelné.
+								 Testování na této platformě bylo poměrně problematické, protože odpovídající operační systém nebyl k dispozici. Pokusy o nasazení byly prováděny pouze na soukromém počítači vedoucího této práce a lze říci, že nebyly 100% úspěšné. Na rozdíl od Linuxu sice bylo možné nainstalovat a spustit vývojové prostředí, ale se samotnou aplikací už ne. Ani po mnoha pokusech se ji nezdařilo plně zprovoznit. Neustále se objevovaly chyby na úrovni OS, které byly obtížně odstranitelné.
 								</p>
 								<p>
 								 O multiplatformnosti Titanium Studia lze tedy oprávněně pochybovat.
